--- a/public/stylesheets/main.1.css
+++ b/public/stylesheets/main.1.css
@@ -41,7 +41,6 @@ a{
 #header-logo{
 	max-width: 16%;
 	margin: 0 0 -4px 0;
-	min-width: 255px;
 }
 #header-logo img{
 	width: 100%;
@@ -66,23 +65,16 @@ a{
 }
 
 #secondary-nav{
-	display: inline-block;
-	min-height:30px;
-	max-height: 30px;
-	padding-right: 40px;
-}
-.navigation{
-	position: relative;
-	padding: .1%;
-	background-color: ghostwhite;
 	text-align: right;
-	
+	background: ghostwhite;
+	padding: .1%;
+	height:30px;
 }
 #secondary-nav a {
 	position: relative;
 	color: #0E76BD;
 	font-size: 18px;
-	padding: 0 15px;
+	margin-right:1%;
 	
 
 }
@@ -189,7 +181,10 @@ a:active {
 .hidden{
 	display: none;
 }
+.navigation{
+	position: relative;
 
+}
 .ham-menu{
 	  border: 1px solid #E0E0E0;
     width: 44px;
@@ -197,8 +192,9 @@ a:active {
     border-radius: 22px;
     background: #0E76BD;
     position: absolute;
-    top: -10px;
-    right: -13px;
+    top: 40px;
+    right: 40px;
+    cursor: pointer;
 }
 .ham-menu div{
 	  border-top: 3px solid #E0E0E0;
@@ -209,25 +205,10 @@ a:active {
     left: 9px;
 }
 
-
-/*rectangle-ham*/
-.ham-menu1 {
-    /* border: 1px solid #E0E0E0; */
-    width: 44px;
-    height: 32px;
-    /* border-radius: 22px; */
-    background: #0E76BD;
-    position: absolute;
-    top: 0px;
-    right: 1px;
-  
+.hidden-menu{
+  position: relative;
 }
-.ham-menu1 div1 {
-    border-top: 3px solid #E0E0E0;
-    width: 26px;
-    margin-bottom: 5px;
-    position: relative;
-    top: 7px;
-    left: 9px;
+.hidden-menu a{
+  display: inline-block;
   
 }
