--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -62,6 +62,7 @@ header {
   position: fixed;
   top: 0px;
   width: 100%;
+  background: #fff;
 }
 #header-block{
   background: #fff;
@@ -349,6 +350,7 @@ header {
 main{
 	width: 960px;
 	margin: 200px auto 0 auto; 
+	display: relative;
 }
 /*.secondary-nav a:link { 
   color: blue;
@@ -502,4 +504,72 @@ div.ham-menu-s:hover, div.ham-menu-m:hover{
     left: 9px;
     
   
+}
+
+/*side nav*/
+#sideNav{
+  /*display: none;*/
+  position: fixed;
+  left:0px;
+  height: 100%;
+}
+#sideNavButton{
+    color: #E0E0E0;
+    background: #232323;
+    cursor: pointer;
+    overflow: hidden;
+    transition: all .5s;
+    text-align: center;
+    font-size: 18px;
+    padding:25px;
+    width: 100px;
+ 
+}
+#sideNavButton a {
+   border-bottom: 1px solid #E0E0E0;
+    color: #E0E0E0;
+}
+
+#sideNavContent{
+    opacity: 1;
+    background: #232323;
+    width: 0;
+    height:100%;
+    overflow-x: hidden;
+    transition: .5s;
+    position: relative;
+    cursor: pointer;
+}
+#sideNavContent > a{
+  margin-top: 2px;
+    color: #E0E0E0;
+    display: block;
+    width: 100%;
+    position: relative;
+    top: 60px;
+    text-align: center;
+    font-size: 30px;
+    border-bottom: .5px solid #E0E0E0;
+}
+
+main >p {
+  margin-bottom: 30px;
+}
+
+main>h3{
+  border-bottom: 1px solid gray;
+}
+#closeSideNav{
+    display: block;
+    text-align: center;
+    font-size: 18px;
+    border: 2px solid #E0E0E0;
+    border-radius: 50px;
+    position: absolute;
+    top: 8px;
+    right: 8px;
+    color: #E0E0E0;
+    padding: 2px;
+    height: 24px;
+    width: 24px; 
 }
